--- a/OauthService.DataAccess/OauthService.DataAccess.csproj
+++ b/OauthService.DataAccess/OauthService.DataAccess.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\OauthService.Model\OauthService.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+
 </Project>
